--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+boto3==1.7.72
+botocore==1.10.72
 Django==1.10.5
+django-s3-storage==0.12.4
 djangorestframework==3.5.3
+docutils==0.14
+jmespath==0.9.3
+python-dateutil==2.7.3
+s3transfer==0.1.13
+six==1.11.0
